# newsletter

./: Cargo.toml  README.md
migrations/: 20250306054016_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuratio.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
