[package]
name = "newsletter"
version = "0.1.0"
edition = "2024"
authors = ["bunny"]
[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "newsletter"


[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres","uuid","time","chrono"] }
syn = { version = "2", features = ["full", "parsing", "proc-macro"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.40"
time = { version = "0.3", features = ["serde"] }

actix-web = "4"
config = "0.11"

actix-files = "0.6.6"
serde = { version = "1.0.218", features = ["derive"] }






[dev-dependencies]
reqwest = "0.12.11"
